# JBKGestione

./: .env.example  .gitignore  LICENSE  README.md  README_DEPLOY.md  SUPABASE_SETUP.md  app.js  demo.html  index.html  manifest.json  package.json  pyproject.toml  pyscript.toml  requirements.txt  run_app.py  service-worker.js  supabase_auto_profiles.sql  supabase_schema.sql  test.html  test_sezioni.py  vercel.json
resources/: README_ICONS.md  jbkgestione.placeholder
src/jbkgestione/: __main__.py  app.py  login_window.py  mock_auth.py  models.py  services.py  supabase_auth.py  supabase_db.py
src/jbkgestione.dist-info/: METADATA  top_level.txt
static/: style.css
static/wheels/: jbkgestione-0.0.1-py3-none-any.whl  postgrest-2.20.0-py3-none-any.whl  realtime-2.20.0-py3-none-any.whl  storage3-2.20.0-py3-none-any.whl  supabase_auth-2.20.0-py3-none-any.whl  supabase_functions-2.20.0-py3-none-any.whl  toga-0.5.2-py3-none-any.whl  toga_winforms-0.5.2-py3-none-any.whl
